tree-sitter-jinn/grammar.js
    source_file: $ => repeat(choice($._newline, $._declaration)),

    _declaration: $ => choice(
      $.annotated_function,
      $.function_definition,
      $.extern_definition,
      $.type_definition,
      $.enum_definition,
      $.error_definition,
      $.trait_definition,
      $.impl_definition,
      $.actor_definition,
      $.store_definition,
      $.view_definition,
      $.migration_definition,
      $.use_declaration,
      $.test_definition,
      $.const_declaration,
      $.global_declaration,
      $.alias_declaration,
    ),

    function_definition: $ => seq(
      '*',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.parameter_list),
      optional(seq('returns', field('return_type', $._type))),
      repeat(seq('!', field('error_type', $._type))),
      $._newline,
      field('body', $.block),
    ),

    parameter_list: $ => choice(
      seq('(', optional(commaSep1($.parameter)), ')'),
      // paren-less parameter list, e.g. `*greet name as string`
      commaSep1($.parameter),
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('type', $._type))),
      optional(seq('is', field('default', $._expression))),
    ),

    type_definition: $ => seq(
      optional('pub'),
      'type',
      field('name', $.identifier),
      optional($.type_parameters),
      optional($.attribute),
      $._newline,
      field('body', $.type_body),
    ),

    type_body: $ => seq(
      $._indent,
      repeat(choice(
        seq($.field_definition, $._newline),
        $.function_definition,
        $.annotated_function,
        $._newline,
      )),
      $._dedent,
    ),

    field_definition: $ => seq(
      optional('&'),
      field('name', $.identifier),
      optional(seq('as', field('type', $._type))),
      optional(seq('is', field('default', $._expression))),
    ),

    enum_definition: $ => seq(
      optional('pub'),
      'enum',
      field('name', $.identifier),
      optional($.type_parameters),
      $._newline,
      $._indent,
      repeat(choice(seq($.variant_definition, $._newline), $._newline)),
      $._dedent,
    ),

    variant_definition: $ => seq(
      field('name', $.identifier),
      optional(seq('(', commaSep1($._type), ')')),
    ),

    actor_definition: $ => seq(
      'actor',
      field('name', $.identifier),
      $._newline,
      $._indent,
      repeat(choice(
        seq($.field_definition, $._newline),
        $.message_handler,
        $._newline,
      )),
      $._dedent,
    ),

    message_handler: $ => choice(
      // `*loop [sleep_expr]` periodic handler
      seq(
        '*',
        'loop',
        optional(field('interval', $._expression)),
        $._newline,
        field('body', $.block),
      ),
      // `@name params` (async) or `*name params` (sync)
      seq(
        choice('@', '*'),
        field('name', $.identifier),
        optional($.handler_parameters),
        optional(seq('returns', field('return_type', $._type))),
        $._newline,
        field('body', $.block),
      ),
    ),

    handler_parameters: $ => choice(
      seq('(', optional(commaSep1($.handler_parameter)), ')'),
      commaSep1($.handler_parameter),
    ),

    handler_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('type', $._type))),
    ),

    _type: $ => choice(
      $.pointer_type,
      $.collection_type,
      $.tuple_type,
      $.named_type,
    ),

    named_type: $ => seq(
      field('name', $.identifier),
      optional($.type_arguments),
    ),

    block: $ => seq(
      $._indent,
      repeat(choice($._statement, $._newline)),
      $._dedent,
    ),

    _statement: $ => choice(
      $.binding,
      $.tuple_binding,
      $.atomic_binding,
      $.assignment,
      $.if_statement,
      $.unless_statement,
      $.while_statement,
      $.until_statement,
      $.for_statement,
      $.sim_statement,
      $.loop_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.defer_statement,
      $.stop_statement,
      $.close_statement,
      $.nop_statement,
      $.use_declaration,
      $.expression_statement,
    ),

    binding: $ => seq(
      field('name', $.identifier),
      optional(seq('as', field('type', $._type))),
      'is',
      field('value', $._expression),
      $._newline,
    ),

    if_statement: $ => prec.dynamic(1, seq(
      'if',
      field('condition', $._expression),
      $._newline,
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause),
    )),

    elif_clause: $ => seq(
      'elif',
      field('condition', $._expression),
      $._newline,
      field('consequence', $.block),
    ),

    else_clause: $ => seq(
      'else',
      $._newline,
      field('consequence', $.block),
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $._expression),
      $._newline,
      field('body', $.block),
    ),

    for_statement: $ => seq(
      'for',
      optional($.access_modifier),
      field('binding', $.identifier),
      optional(seq(',', field('binding2', $.identifier))),
      choice('in', 'from'),
      field('iterable', $._expression),
      optional(seq('to', field('end', $._expression))),
      optional(seq('by', field('step', $._expression))),
      $._newline,
      field('body', $.block),
    ),

    match_statement: $ => seq(
      'match',
      field('subject', $._expression),
      $._newline,
      $._indent,
      repeat(choice($.match_arm, $._newline)),
      $._dedent,
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional($.match_guard),
      '?',
      choice(
        $._statement,
        seq($._newline, field('body', $.block)),
      ),
    ),

    return_statement: $ => seq(
      'return',
      optional(field('value', $._expression)),
      $._newline,
    ),

    expression_statement: $ => seq($._expression, $._newline),

    // ── Expressions ─────────────────────────────────────────────────────
    _expression: $ => choice(
      $.ternary_expression,
      $._pipe_expression,
    ),

    binary_expression: $ => choice(
      binLeft($, PREC.OR, 'or'),
      binLeft($, PREC.XOR, 'xor'),
      binLeft($, PREC.AND, 'and'),
      binLeft($, PREC.EQUALITY, choice('==', '!=', 'equals', 'eq', 'neq')),
      binLeft($, PREC.COMPARE, choice(
        '<', '>', '<=', '>=',
        'lt', 'gt', 'lte', 'gte', 'nlt', 'ngt', 'nlte', 'ngte', 'in',
      )),
      binLeft($, PREC.BIT_OR, '|'),
      binLeft($, PREC.BIT_XOR, '^'),
      binLeft($, PREC.BIT_AND, '&'),
      binLeft($, PREC.SHIFT, choice('<<', '>>', '>>>')),
      binLeft($, PREC.ADD, choice('+', '-')),
      binLeft($, PREC.MUL, choice('*', '/', '%', 'mod')),
      prec.right(PREC.EXP, seq(
        field('left', $._expression),
        field('operator', choice('**', 'pow')),
        field('right', $._expression),
      )),
    ),

    _argument_list: $ => commaSep1($.argument),

    argument: $ => choice(
      seq(field('name', $.identifier), 'is', field('value', $._expression)),
      $._expression,
    ),

    log_expression: $ => seq('log', '(', optional($._argument_list), ')'),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.constructor_pattern,
      $.tuple_pattern,
      $.identifier_pattern,
    ),

    identifier_pattern: $ => $.identifier,

    constructor_pattern: $ => seq(
      field('name', $.identifier),
      '(',
      commaSep1($._pattern),
      ')',
    ),

    integer: _ => token(choice(
      /0[xX][0-9a-fA-F_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
      /[0-9][0-9_]*/,
    )),

    raw_string: _ => seq('"', /[^"\n]*/, '"'),

    // Single-quoted rich string: escapes + `{expr}` interpolation, and
    // triple-quoted heredocs.
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});

// ── helpers ────────────────────────────────────────────────────────────
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function sep1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)));
}
