tree-sitter-jinn/test/corpus/basics.txt
================================================================================
Hello world
================================================================================

*main()
    log("hello")

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (log_expression
          (argument
            (raw_string)))))))

================================================================================
Binding
================================================================================

*main()
    x is 42

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (binding
        (identifier)
        (integer)))))

================================================================================
If elif else
================================================================================

*main()
    if x gt 0
        log(1)
    elif x lt 0
        log(2)
    else
        log(0)

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (binary_expression
          (identifier)
          (integer))
        (block
          (expression_statement
            (log_expression
              (argument
                (integer)))))
        (elif_clause
          (binary_expression
            (identifier)
            (integer))
          (block
            (expression_statement
              (log_expression
                (argument
                  (integer))))))
        (else_clause
          (block
            (expression_statement
              (log_expression
                (argument
                  (integer))))))))))

================================================================================
While loop
================================================================================

*main()
    while n gt 0
        n is n - 1

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (while_statement
        (binary_expression
          (identifier)
          (integer))
        (block
          (binding
            (identifier)
            (binary_expression
              (identifier)
              (integer))))))))

================================================================================
For loop
================================================================================

*main()
    for i in xs
        log(i)

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (identifier)
        (identifier)
        (block
          (expression_statement
            (log_expression
              (argument
                (identifier)))))))))

================================================================================
Type definition
================================================================================

type Point
    x as i64
    y as i64

--------------------------------------------------------------------------------

(source_file
  (type_definition
    (identifier)
    (type_body
      (field_definition
        (identifier)
        (named_type
          (identifier)))
      (field_definition
        (identifier)
        (named_type
          (identifier))))))

================================================================================
Enum definition
================================================================================

enum Direction
    North
    South
    East
    West

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    (identifier)
    (variant_definition
      (identifier))
    (variant_definition
      (identifier))
    (variant_definition
      (identifier))
    (variant_definition
      (identifier))))

================================================================================
Match statement
================================================================================

*area(s as Shape) returns i64
    match s
        Circle(r) ? r
        Rect(w, h) ? w

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (match_statement
        (identifier)
        (match_arm
          (constructor_pattern
            (identifier)
            (identifier_pattern
              (identifier)))
          (expression_statement
            (identifier)))
        (match_arm
          (constructor_pattern
            (identifier)
            (identifier_pattern
              (identifier))
            (identifier_pattern
              (identifier)))
          (expression_statement
            (identifier)))))))

================================================================================
Function with parameters and return
================================================================================

*add(a as i64, b as i64) returns i64
    return a + b

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (named_type
          (identifier)))
      (parameter
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (return_statement
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Actor with handler
================================================================================

actor Worker
    count

    @work n
        count is count + n

--------------------------------------------------------------------------------

(source_file
  (actor_definition
    (identifier)
    (field_definition
      (identifier))
    (message_handler
      (identifier)
      (handler_parameters
        (handler_parameter
          (identifier)))
      (block
        (binding
          (identifier)
          (binary_expression
            (identifier)
            (identifier)))))))
